--- a/programming.html
+++ b/programming.html
@@ -50,16 +50,14 @@
         </div>
 
         <!-- Firefly -->
-        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+        <div class="section row text-center solid-background">
             <div class="col-md-8 my-auto">
-                <a href="https://devpost.com/software/firefly-jl91pg" target="_blank">
-                    <div class="row flex-nowrap mx-auto mb-3">
-                        <img src="Assets/FireflyLogo.png" class="appIcon my-auto">
-                        <h1 class="text-white my-auto">Firefly</h1>
-                    </div>
-                    <h3 class="text-white">A full-stack website that allows professors to get a real-time temperature check about how the class feels about each part of a lecture</h3>
-                    <p class = "text-white">(Submission for HackGT 10)</p>
-                </a>
+                <div class="row flex-nowrap mx-auto mb-3">
+                    <img src="Assets/FireflyLogo.png" class="appIcon my-auto">
+                    <h1 class="text-white my-auto">Firefly</h1>
+                </div>
+                <h3 class="text-white">A full-stack website that allows professors to get a real-time temperature check about how the class feels about each part of a lecture</h3>
+                <p class = "text-white">(Submission for HackGT 10)</p>
             </div>
             <div class="col-md-4 my-auto mx-auto">
                 <a href="https://devpost.com/software/firefly-jl91pg" target="_blank">
@@ -72,23 +70,23 @@
         <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/cropRecomendationGraph.png');">
             <div class="col-md-8 my-auto">
                 <a href="https://github.com/PotentialError/CS4641-ML-Final-Project" target="_blank">
-                    <h1 class="text-white my-auto">Crop Recommendation Model</h1>
-                    <h3 class="text-white">A classic machine learning model that predicts the best crop to plant given soil characteristics</h3>
+                    <div class="pop">
+                        <h1 class="text-white my-auto">Crop Recommendation Model</h1>
+                        <h3 class="text-white">A classic machine learning model that predicts the best crop to plant given soil characteristics</h3>
+                    </div>
                 </a>
             </div>
         </div>
 
         <!-- DiningDetective -->
-        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+        <div class="section row text-center solid-background">
             <div class="col-md-8 my-auto">
-                <a href="https://devpost.com/software/gt-dining-detective" target="_blank">
-                    <div class="row flex-nowrap mx-auto mb-3">
-                        <img src="Assets/diningDetectiveSquareLogo.png" class="appIcon my-auto">
-                        <h1 class="text-white my-auto">Dining Detective</h1>
-                    </div>
-                    <h3 class="text-white">Android app that uses a neural network to predict dining hall conditions at Georgia Tech</h3>
-                    <p class="text-white">(Submission for HackGT 8)</p>
-                </a>
+                <div class="row flex-nowrap mx-auto mb-3">
+                    <img src="Assets/diningDetectiveSquareLogo.png" class="appIcon my-auto">
+                    <h1 class="text-white my-auto">Dining Detective</h1>
+                </div>
+                <h3 class="text-white">Android app that uses a neural network to predict dining hall conditions at Georgia Tech</h3>
+                <p class="text-white">(Submission for HackGT 8)</p>
             </div>
             <div class="col-md-4 my-auto mx-auto">
                 <a href="https://devpost.com/software/gt-dining-detective" target="_blank">
@@ -101,23 +99,23 @@
         <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/hayWireScrrenshot.PNG');">
             <div class="col-md-8 my-auto">
                 <a href="https://github.com/PotentialError/GMTK2020GameJam" target="_blank">
-                    <h1 class="text-white my-auto">Haywire</h1>
-                    <h3 class="text-white">2D Unity platformer game about a robot that has gone out of control</h3>
-                    <p class = "text-white">(Submission for GMTK Game Jam 2020)</p>
+                    <div class="pop">
+                        <h1 class="text-white my-auto">Haywire</h1>
+                        <h3 class="text-white">2D Unity platformer game about a robot that has gone out of control</h3>
+                        <p class = "text-white">(Submission for GMTK Game Jam 2020)</p>
+                    </div>
                 </a>
             </div>
         </div>
 
         <!-- Debate Tracker App -->
-        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+        <div class="section row text-center solid-background">
             <div class="col-md-8 my-auto">
-                <a href="https://github.com/PotentialError/DebateTrackerApp" target="_blank">
-                    <div class="row flex-nowrap mx-auto mb-3">
-                        <img src="Assets/debateTrackerSquareLogo.png" class="appIcon my-auto">
-                        <h1 class="text-white my-auto">Debate Tracker App</h1>
-                    </div>
-                    <h3 class="text-white">Android app for NSDA and NCFL high school debaters to track their debate rounds</h3>
-                </a>
+                <div class="row flex-nowrap mx-auto mb-3">
+                    <img src="Assets/debateTrackerSquareLogo.png" class="appIcon my-auto">
+                    <h1 class="text-white my-auto">Debate Tracker App</h1>
+                </div>
+                <h3 class="text-white">Android app for NSDA and NCFL high school debaters to track their debate rounds</h3>
             </div>
             <div class="col-md-4 my-auto mx-auto">
                 <a href="https://github.com/PotentialError/DebateTrackerApp" target="_blank">
@@ -129,22 +127,23 @@
         <!-- Ball Game -->
         <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/RollABallScreenshot.PNG');">
             <div class="col-md-8 my-auto">
+                
                 <a href="https://github.com/PotentialError/BallGame" target="_blank">
-                    <h1 class="text-white my-auto">Ball Game</h1>
-                    <h3 class="text-white">3D Unity game about the adventures of a ball and his coins</h3>
+                    <div class="pop">
+                        <h1 class="text-white my-auto">Ball Game</h1>
+                        <h3 class="text-white">3D Unity game about the adventures of a ball and his coins</h3>
+                    </div>
                 </a>
             </div>
         </div>
 
         <!-- MikeyBot -->
-        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+        <div class="section row text-center solid-background">
             <div class="col-md-8 my-auto">
-                <a href="https://github.com/PotentialError/DiscordBotTesting" target="_blank">
-                    <div class="row flex-nowrap mx-auto mb-3">
-                        <h1 class="text-white my-auto text-center">MikeyBot</h1>
-                    </div>
-                    <h3 class="text-white">Discord bot that uses Java Discord API to provide users useful features for their server</h3>
-                </a>
+                <div class="row flex-nowrap mx-auto mb-3">
+                    <h1 class="text-white my-auto text-center">MikeyBot</h1>
+                </div>
+                <h3 class="text-white">Discord bot that uses Java Discord API to provide users useful features for their server</h3>
             </div>
             <div class="col-md-4 my-auto mx-auto">
                 <a href="https://github.com/PotentialError/DiscordBotTesting" target="_blank">
@@ -157,7 +156,7 @@
         <div class="section row text-center" style="min-height:30vh; background-image: linear-gradient(rgba(4, 4, 63, 0.975), rgba(4, 4, 63,0.775)), url('Assets/codeBackground.PNG');">
             <div class="col my-auto">
                 <h2 class="text-white title">More of my work can be found on:</h2>
-                <h2><a href="https://github.com/PotentialError"> My Github <i class="bi bi-github" aria-hidden="true"></i></a></h2>
+                <h2><a href="https://github.com/PotentialError" class="whiteLinks" target="_blank"> My Github <i class="bi bi-github" aria-hidden="true"></i></a></h2>
             </div>
         </div>
 
